fix spacing between project descriptions

--- a/screen.css
+++ b/screen.css
@@ -135,7 +135,7 @@ a:hover {
 
 .title {
     width: 100%;
-    font-size: 3vw;
+    font-size: 2.9vw;
     font-weight: bold;
     margin: 1.5vw 1vw 0;
     
@@ -232,6 +232,7 @@ a:hover {
 
 .detail {
     font-size: 1.2rem;
+    margin: 5px 0;
     
 }
 
